# bendio

./: .gitignore  CHANGELOG.md  NOTICE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bendio/: __init__.py  cli.py  link.py  radio.py  server.py
bendio/audio/: __init__.py  macos_rfcomm.py
benshi/: __init__.py  cli.py  link.py  radio.py
benshi/audio/: framing.py  macos_rfcomm.py  sbc.py
benshi/protocol/command/: message.py
docs/: PROTOCOL_NOTES.md  ble_fm_rx_trace.md
examples/: 01_device_info.py  02_sniff_fm_rx.py  03_listen.py  04_ptt.py
scripts/: mac_bluetooth_setup.py  mic_check.py
tests/: test_framing.py  test_protocol.py  test_sbc.py  test_server.py
