[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benshi"
version = "0.1.0"
description = "macOS library for two-way audio with BTech UV-Pro / Benshi-family ham radios"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Edward Ivory" }]
dependencies = [
    "bleak>=0.22.0",
    "typing_extensions>=4.1.0",
    "pyobjc-framework-IOBluetooth>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.6",
]
dev = [
    "pytest>=7",
]

[project.scripts]
benshi = "benshi.cli:main"

[tool.setuptools.packages.find]
include = ["benshi*"]
